--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Asha</title>
+    <title>Front-end Developer Asha</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -39,8 +39,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-            <a class="nav-link" href="about.html"> About Me</a>
-            <a class="nav-link" href="about.html#contact"> Contact Me</a>
+            <a class="nav-link" href="about.html" title="About Asha Marjani"> About Me</a>
+            <a class="nav-link" href="about.html#contact" title="Contact Asha Marjani"> Contact Me</a>
           </div>
         </div>
       </div>
